fix navbar not showing

--- a/static/css/a_dashboard.css
+++ b/static/css/a_dashboard.css
@@ -246,7 +246,7 @@ a:hover {
   color: #027a48;
 }
 #dashboard_card #pending_ ion-icon {
-  color: #8d75e6;
+  color: #5b616b8f;
 }
 #dashboard_card #rejected_ ion-icon {
   color: #dc3545;
